# KateWebApp

./: .env.example  README.md  kate_web_app.service  pyproject.toml  requirements.txt  show_db_data.py
app/: __main__.py  config.py  database.py
app/utils/: __init__.py  parse_data.py  send_email.py  send_telegram.py
templates/: index.html  report.html
tests/: db_test.py  email_test.py
